--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
                     <a class="button is-primary">
                         <strong>Sign up</strong>
                     </a>
-                    <a class="button is-light">
+                    <a href="{% url 'login' %}" class="button is-light">
                         Log in
                     </a>
                 </div>
