--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Profil de {{ user.username }}</h1>
-<ul>
-    <li>Nom d'utilisateur : {{ user.username }}</li>
-    <li>Email : {{ user.email }}</li>
-    <!-- Ajoute d'autres informations que tu souhaites afficher ici -->
-</ul>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">Profil de {{ user.username }}</h1>
+            <div class="box">
+                <ul>
+                    <li><strong>Nom d'utilisateur :</strong> {{ user.username }}</li>
+                    {% if user.email %}
+                        <li><strong>Email :</strong> {{ user.email }}</li>
+                    {% endif %}
+              score:   {{  user.score }}
+                    <!-- Ajoute d'autres informations que tu souhaites afficher ici -->
+                </ul>
+            </div>
+        </div>
+    </section>
 {% endblock %}
