--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -10,8 +10,7 @@
                     {% if user.email %}
                         <li><strong>Email :</strong> {{ user.email }}</li>
                     {% endif %}
-              score:   {{  user.score }}
-                    <!-- Ajoute d'autres informations que tu souhaites afficher ici -->
+                    score: {{ user.total_score }}
                 </ul>
             </div>
         </div>
