--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,7 @@
+{% extends "meta-base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Mon Site Web</title>
-    <link rel="stylesheet" href="{% static 'css/bulma.css' %}"></head>
-<body>
-<header>
-    <!-- Contenu de l'en-tête ici -->
-</header>
 
+{% block base-content %}
 {% include 'navbar.html' %}
 
 <main>
@@ -21,5 +13,4 @@
 <footer>
     <!-- Pied de page ici -->
 </footer>
-</body>
-</html>
+{% endblock %}
