--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,12 +3,16 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a class="button is-primary">
-                        <strong>Sign up</strong>
-                    </a>
-                    <a href="{% url 'login' %}" class="button is-light">
-                        Log in
-                    </a>
+                    {% if user.is_authenticated %}
+                        <a href="#" class="button is-light">Log out</a>
+                    {% else %}
+                        <a class="button is-primary">
+                            <strong>Sign up</strong>
+                        </a>
+                        <a href="{% url 'login' %}" class="button is-light">
+                            Log in
+                        </a>
+                    {% endif %}
                 </div>
             </div>
         </div>
