--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,28 @@
+{% load static %}
 <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <!-- Logo -->
+
+    </div>
+
     <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+            <div class="navbar-item">
+                <a href="{% url 'game_list' %}">Games</a>
+            </div>
+
+            <div class="navbar-item">
+                <a href="{% url 'profile' %}">Profile</a>
+            </div>
+        </div>
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
                     {% if user.is_authenticated %}
-                        <a href="#" class="button is-light">Log out</a>
+                        <form action="{% url 'logout' %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" class="button is-light">Logout</button>
+                        </form>
                     {% else %}
                         <a class="button is-primary">
                             <strong>Sign up</strong>
@@ -15,6 +33,9 @@
                     {% endif %}
                 </div>
             </div>
+            <a class="navbar-item" href="https://github.com/renaudcepre/" target="_blank">
+                <img src="{% static 'svg/github_logo.svg' %}" alt="GitHub Logo">
+            </a>
         </div>
     </div>
 </nav>
