--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,9 @@
             <div class="navbar-item">
                 <a href="{% url 'game_list' %}">Games</a>
             </div>
-
+            <div class="navbar-item">
+                <a href="{% url 'leaderboards' %}">Leaderboards</a>
+            </div>
             <div class="navbar-item">
                 <a href="{% url 'profile' %}">Profile</a>
             </div>
