--- a/static/css/leaderboards.css
+++ b/static/css/leaderboards.css
@@ -11,7 +11,44 @@
     color: #ffffff;
     text-shadow: 0 0 15px rgba(255, 255, 255, 0.7),
     0 0 0 #ffffff;
-    font-size: 5em;
+    /*font-size: 5em;*/
+    text-align: center;
+    font-family: "Pixelify Sans", sans-serif;
+}
+
+.login-link {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease; /* Ajoute une transition en fondu */
+}
+
+.login-link.show {
+    opacity: 1;
+    visibility: visible;
+}
+
+
+#extensions {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.lb-leaderboard-title {
+    color: rgba(255, 255, 255, 0.45);
+    text-shadow: 0 0 15px rgba(255, 255, 255, 0.7),
+    0 0 0 rgba(255, 255, 255, 0.42);
+    /*font-size: 5em;*/
+    text-align: center;
+    font-family: "Pixelify Sans", sans-serif;
+}
+
+.lb-title-light {
+    color: rgba(255, 255, 255, 0.36);
+    text-shadow: 0 0 15px rgba(255, 255, 255, 0.7),
+    0 0 0 rgba(255, 255, 255, 0.31);
+    font-size: 2em;
     text-align: center;
     font-family: "Pixelify Sans", sans-serif;
 }
