--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,20 +1,19 @@
 {% load static %}
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-        <!-- Logo -->
 
     </div>
 
-    <div id="navbarBasicExample" class="navbar-menu">
+    <div id="navbar" class="navbar-menu ">
         <div class="navbar-start">
             <div class="navbar-item">
-                <a href="{% url 'game_list' %}">Games</a>
+                <a class="has-text-white  has-text-weight-bold" href="{% url 'game_list' %}">Games</a>
             </div>
             <div class="navbar-item">
-                <a href="{% url 'leaderboards' %}">Leaderboards</a>
+                <a class="has-text-white has-text-weight-bold" href="{% url 'leaderboards' %}">Leaderboards</a>
             </div>
             <div class="navbar-item">
-                <a href="{% url 'profile' %}">Profile</a>
+                <a class="has-text-white has-text-weight-bold" href="{% url 'profile' %}">Profile</a>
             </div>
         </div>
         <div class="navbar-end">
