--- a/templates/meta-base.html
+++ b/templates/meta-base.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Archigame !</title>
-    <link rel="stylesheet" href="{% static 'css/bulma.css' %}">
-    <link rel="stylesheet" href="{% static 'css/leaderboards.css' %}">
+
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bulma.css' %}">
+    {% block head %}{% endblock %}
 
     <script src="{% static 'js/main.js' %}"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
