--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "crud/base.html" %}
 
 {% block content %}
     <div class="is-flex is-flex-direction-column is-align-items-center is-justify-content-center" style="height: 100vh;">
