--- a/templates/meta-base.html
+++ b/templates/meta-base.html
@@ -7,9 +7,16 @@
 
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/bulma.css' %}">
+    <link rel="stylesheet" href="{% static 'css/choices.css' %}">
     {% block head %}{% endblock %}
 
     <script src="{% static 'js/main.js' %}"></script>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
