--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
 {% block base-content %}
 
 
-{% include 'crud/../navbar.html' %}
+{% include 'navbar.html' %}
 
-<main>
+<main class="w-full">
     {% block content %}
     {% endblock %}
 </main>
