--- a/templates/games/add_game.html
+++ b/templates/games/add_game.html
@@ -40,8 +40,43 @@
                     </div>
                 </div>
             </div>
-            <div id="extensions"></div>
-            <button type="button" onclick="addExtensionField()">Ajouter Extension</button>
+
+            <div class="border border-gray-300 " id="extensions-form-container">
+                <h3 class="text-pixel text-glow text-xl">Extensions </h3>
+
+                {{ extensions_form.management_form }}
+                {% for form in extensions_form %}
+                    <div class="extension-form px-2 w-full md:w-1/2 lg:w-1/4">
+                        <div class="mt-1">
+                            {{ form.name.label_tag }}
+                            {{ form.name|add_class:"shadow appearance-none border rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline bg-opacity-40 bg-gray-700" }}
+                            {% if form.name.errors %}
+                                <div class="text-red-700 text-sm">
+                                    {% for error in form.name.errors %}
+                                        <p>{{ error }}</p>
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
+                        </div>
+                        <div class="mt-1">
+                            {{ form.bgg_number.label_tag }}
+                            {{ form.bgg_number|add_class:"shadow appearance-none border rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline bg-opacity-40 bg-gray-700" }}
+                            {% if form.bgg_number.errors %}
+                                <div class="text-red-700 text-sm">
+                                    {% for error in form.bgg_number.errors %}
+                                        <p>{{ error }}</p>
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
+                            <span class="text-[0.7em]">Ce numéro sert a créer un lien vers la page BGG du jeu.</span>
+                        </div>
+                    </div>
+                {% endfor %}
+            
+                <button type="button" id="add-extension">Ajouter une extension</button>
+
+            </div>
+
             <div class="flex justify-end mt-4">
                 <button type="submit"
                         class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-opacity-30">
@@ -50,51 +85,29 @@
             </div>
         </form>
     </div>
-    <script>
-        let extensionCount = 0;
 
-        function addExtensionField() {
-            const container = document.getElementById('extensions');
+    <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', function () {
+            var addButton = document.getElementById('add-extension');
+            var container = document.getElementById('extensions-form-container');
+            var totalForms = document.getElementById('id_extensions-TOTAL_FORMS');
+            var formCount = parseInt(totalForms.value - 1);
 
-            const extensionDiv = document.createElement('div');
-            extensionDiv.classList.add('flex', 'flex-wrap', '-mx-2', 'justify-center', 'mt-2');
+            addButton.addEventListener('click', function () {
+                var newForm = container.querySelector('.extension-form:last-of-type').cloneNode(true);
+                var formRegex = RegExp('extensions-(\\d+)-', 'g');
 
-            const nameInputDiv = document.createElement('div');
-            nameInputDiv.classList.add('px-2', 'w-2/4');
+                formCount++;
+                newForm.innerHTML = newForm.innerHTML.replace(formRegex, 'extensions-' + formCount + '-');
+                container.insertBefore(newForm, addButton);
 
-            const nameLabel = document.createElement('label');
-            nameLabel.classList.add('block', 'text-sm', 'font-bold', 'mb-2');
-            nameLabel.innerHTML = 'Nom de l\'Extension';
-
-            const nameInput = document.createElement('input');
-            nameInput.type = 'text';
-            nameInput.name = 'extension_name_' + extensionCount;
-            nameInput.classList.add('shadow', 'appearance-none', 'border', 'rounded', 'w-full', 'py-2', 'px-3', 'leading-tight', 'focus:outline-none', 'focus:shadow-outline', 'bg-opacity-40', 'bg-gray-700');
-
-            nameInputDiv.appendChild(nameLabel);
-            nameInputDiv.appendChild(nameInput);
-
-            const numberInputDiv = document.createElement('div');
-            numberInputDiv.classList.add('px-2', 'w-1/4');
-
-            const numberLabel = document.createElement('label');
-            numberLabel.classList.add('block', 'text-sm', 'font-bold', 'mb-2');
-            numberLabel.innerHTML = 'Numéro BGG';
-
-            const numberInput = document.createElement('input');
-            numberInput.type = 'text';
-            numberInput.name = 'extension_bgg_number_' + extensionCount;
-            numberInput.classList.add('shadow', 'appearance-none', 'border', 'rounded', 'w-full', 'py-2', 'px-3', 'leading-tight', 'focus:outline-none', 'focus:shadow-outline', 'bg-opacity-40', 'bg-gray-700');
-
-            numberInputDiv.appendChild(numberLabel);
-            numberInputDiv.appendChild(numberInput);
-
-            extensionDiv.appendChild(nameInputDiv);
-            extensionDiv.appendChild(numberInputDiv);
-
-            container.appendChild(extensionDiv);
-
-            extensionCount++;
-        }
+                totalForms.setAttribute('value', formCount + 1);
+            });
+        });
     </script>
+
+
+
 {% endblock %}
+
+
