--- a/templates/games/add_game.html
+++ b/templates/games/add_game.html
@@ -18,6 +18,8 @@
                 </div>
             {% endif %}
 
+            {#        GAME          #}
+
             <div class="flex flex-wrap -mx-2 justify-center">
                 <div class="px-2 w-2/4">
                     <label class="block text-sm font-bold mb-2" for="name">Nom du Jeu</label>
@@ -41,69 +43,109 @@
                 </div>
             </div>
 
-            <div class="border border-gray-300 " id="extensions-form-container">
+
+            {#        EXTENSIONS          #}
+            <div class="border border-gray-300 p-2 mt-6 " id="extensions-form-container">
                 <h3 class="text-pixel text-glow text-xl">Extensions </h3>
 
                 {{ extensions_form.management_form }}
                 {% for form in extensions_form %}
-                    <div class="extension-form px-2 w-full md:w-1/2 lg:w-1/4">
-                        <div class="mt-1">
+                    <div id="extension-form-{{ forloop.counter0 }}"
+                         class="extension-form p-2 w-full flex gap-2 items-center">
+
+                    <div class="mt-1 w-full ">
+                        <div class="block text-sm font-bold mb-2">
                             {{ form.name.label_tag }}
-                            {{ form.name|add_class:"shadow appearance-none border rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline bg-opacity-40 bg-gray-700" }}
-                            {% if form.name.errors %}
-                                <div class="text-red-700 text-sm">
-                                    {% for error in form.name.errors %}
-                                        <p>{{ error }}</p>
-                                    {% endfor %}
-                                </div>
-                            {% endif %}
                         </div>
-                        <div class="mt-1">
+                        {{ form.name|add_class:"shadow appearance-none border rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline  bg-opacity-40 bg-gray-700" }}
+                        {% if form.name.errors %}
+                            <div class="text-red-700 text-sm">
+                                {% for error in form.name.errors %}
+                                    <p>{{ error }}</p>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    </div>
+
+                    <div class="mt-1 w-1/4">
+                        <div class="block text-sm mb-2">
                             {{ form.bgg_number.label_tag }}
-                            {{ form.bgg_number|add_class:"shadow appearance-none border rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline bg-opacity-40 bg-gray-700" }}
-                            {% if form.bgg_number.errors %}
-                                <div class="text-red-700 text-sm">
-                                    {% for error in form.bgg_number.errors %}
-                                        <p>{{ error }}</p>
-                                    {% endfor %}
-                                </div>
-                            {% endif %}
-                            <span class="text-[0.7em]">Ce numéro sert a créer un lien vers la page BGG du jeu.</span>
                         </div>
+                        {{ form.bgg_number|add_class:"shadow appearance-none border rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline bg-opacity-40 bg-gray-700" }}
+                        {% if form.bgg_number.errors %}
+                            <div class="text-red-700 text-sm">
+                                {% for error in form.bgg_number.errors %}
+                                    <p>{{ error }}</p>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    </div>
+
+
+                    <div class="block text-sm mb-2">
+                        <button type="button"
+                                class="remove-extension inline-flex mt-6 items-center justify-center py-1 px-2 border border-transparent shadow-sm text-sm leading-4 font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
+                                data-form-id="extension-form-{{ forloop.counter0 }}">Supprimer
+                        </button>
                     </div>
                 {% endfor %}
-            
+                </div>
+
+
                 <button type="button" id="add-extension">Ajouter une extension</button>
+
 
             </div>
 
+            {#                SUBMIT #}
             <div class="flex justify-end mt-4">
                 <button type="submit"
                         class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 bg-opacity-30">
                     Ajouter
                 </button>
+
             </div>
+
         </form>
     </div>
 
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', function () {
-            var addButton = document.getElementById('add-extension');
-            var container = document.getElementById('extensions-form-container');
-            var totalForms = document.getElementById('id_extensions-TOTAL_FORMS');
-            var formCount = parseInt(totalForms.value - 1);
+            const addButton = document.getElementById('add-extension');
+            const container = document.getElementById('extensions-form-container');
+            const totalForms = document.getElementById('id_extensions-TOTAL_FORMS');
+
+            const updateIndices = () => {
+                const allForms = container.querySelectorAll('.extension-form');
+                allForms.forEach((form, index) => {
+                    const formRegex = RegExp('extensions-(\\d+)-', 'g');
+                    form.innerHTML = form.innerHTML.replace(formRegex, (match, n) => {
+                        return match.replace(n, index);
+                    });
+                    form.id = 'extension-form-' + index;
+                });
+                totalForms.setAttribute('value', allForms.length);
+            };
 
             addButton.addEventListener('click', function () {
-                var newForm = container.querySelector('.extension-form:last-of-type').cloneNode(true);
-                var formRegex = RegExp('extensions-(\\d+)-', 'g');
-
-                formCount++;
-                newForm.innerHTML = newForm.innerHTML.replace(formRegex, 'extensions-' + formCount + '-');
+                let formCount = parseInt(totalForms.value);
+                const newForm = container.querySelector('.extension-form:last-of-type').cloneNode(true);
+                newForm.innerHTML = newForm.innerHTML.replace(/extensions-\d+-/g, 'extensions-' + formCount + '-');
+                newForm.id = 'extension-form-' + formCount;
                 container.insertBefore(newForm, addButton);
+                formCount++;
+                totalForms.setAttribute('value', formCount);
+            });
 
-                totalForms.setAttribute('value', formCount + 1);
+            container.addEventListener('click', function (e) {
+                if (e.target.classList.contains('remove-extension')) {
+                    const formToRemove = e.target.closest('.extension-form');
+                    formToRemove.remove();
+                    updateIndices(); // Met à jour les indices après suppression
+                }
             });
         });
+
     </script>
 
 
